Populate data and testing

--- a/BuscadorMercadoLibre/BuscadorMercadoLibre/ViewControllers/SearchResultsViewController/SearchResultsTableViewCell/SearchResultsTableViewCell.xib
+++ b/BuscadorMercadoLibre/BuscadorMercadoLibre/ViewControllers/SearchResultsViewController/SearchResultsTableViewCell/SearchResultsTableViewCell.xib
@@ -33,8 +33,12 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Envio gratis" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4qj-BN-Yl0" userLabel="shippingLabel">
-                        <rect key="frame" x="200" y="105" width="71" height="16"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Envio gratis" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4qj-BN-Yl0" userLabel="shippingLabel">
+                        <rect key="frame" x="200" y="105" width="80" height="22"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="80" id="Ulq-oJ-2n6"/>
+                            <constraint firstAttribute="height" constant="22" id="a6n-BL-9CI"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
